--- a/TestProjectRevitAdapter/TestProjectRevitAdapter.csproj
+++ b/TestProjectRevitAdapter/TestProjectRevitAdapter.csproj
@@ -3,12 +3,17 @@
   <PropertyGroup>
     <TargetFrameworks>net48</TargetFrameworks>
     <IsTestProject>true</IsTestProject>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="ricaun.RevitTest.TestAdapter" Version="*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="*" Condition="!$(TargetFramework.StartsWith('net4'))" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="2024.*" IncludeAssets="build; compile" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
